tests/ui/loop-match/const-continue-to-polymorphic-const.stderr
error: could not determine the target branch for this `#[const_continue]`
  --> $DIR/const-continue-to-polymorphic-const.rs:18:36
   |
LL |                         break 'blk Self::TARGET;
   |                                    ^^^^^^^^^^^^ this value is too generic
   |
   = note: the value must be a literal or a monomorphic const

error: aborting due to 1 previous error

